Fixes overflow url text

--- a/app/assets/stylesheets/theme_sinai/components/_si-metadata-block.scss
+++ b/app/assets/stylesheets/theme_sinai/components/_si-metadata-block.scss
@@ -171,6 +171,7 @@
   display: flex;
   flex-wrap: wrap;
   font-weight: 300;
+  word-break: break-all;
 
   span {
     margin: 5px 5px 5px 0;
